# DiffPatcher

./: .gitattributes  .gitignore  README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  jitpack.yml  settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/cpp/HDiffPatch/: README_cn.md
src/main/cpp/HDiffPatch/builds/android_ndk_jni_mk/: Android.mk
src/main/cpp/HDiffPatch/libHDiffPatch/HDiff/: diff.cpp  diff.h  diff_types.h
src/main/cpp/HDiffPatch/libHDiffPatch/HDiff/private_diff/: bytes_rle.h  suffix_string.cpp  suffix_string.h
src/main/cpp/HDiffPatch/libHDiffPatch/HDiff/private_diff/limit_mem_diff/: digest_matcher.cpp
src/main/cpp/HDiffPatch/libHDiffPatch/HPatch/: patch.c
src/main/cpp/HDiffPatch/libHDiffPatch/HPatch/hpatch_mt/: hpatch_mt.c
src/main/cpp/HDiffPatch/test/: unit_test.cpp
src/main/java/com/github/sisong/: HPatch.java
src/main/kotlin/com/youhaoka/diffupdate/: DiffPatcher.kt
src/test/kotlin/com/youhaoka/diffupdate/: DiffPatcherTest.kt
